[package]
authors = ["Bruno Tavares <connect+github@bltavares.com>"]
name = "heartbeat"
version = "0.1.1"

[dependencies]
arrayvec = "0.3.16"
clap = "2.5.1"
screenprints = "0.1.0"
stopwatch = "0.0.7"
time = "0.1.35"
url = "1.1.0"

[dependencies.hyper]
branch = "redirect_count"
git = "https://github.com/bltavares/hyper"
